@startuml core_engine
' Super Mario Plus - application skeleton
' Verified against the source tree at commit b378acb.
' Matches: src/core/Game.cpp, src/core/StateManager.cpp, include/states/GameState.h

title Core Engine — game loop and screen stack

skinparam classAttributeIconSize 0
skinparam linetype ortho

class Game {
  - const float fixedDt = 1/60
  - float accumulator
  - StateManager stateManager
  + Game()
  + runGame()
}
note right of Game
  Fixed timestep with an accumulator.
  Frame time is clamped to 0.25 s so a
  stall cannot cause an unbounded
  catch-up loop.
end note

class StateManager {
  - stack<unique_ptr<GameState>> stateStack
  + PushState(unique_ptr<GameState>)
  + PopState()
  + ChangeState(unique_ptr<GameState>)
  + isEmpty() : bool
  + HandleInput()
  + Process()
  + Update(float dt)
  + Render(float alpha) const
}

abstract class GameState {
  - vector<unique_ptr<IGameCommand>> stateCommandQueue
  + {abstract} HandleInput()
  + {abstract} Process()
  + {abstract} Update(float dt)
  + {abstract} Render(float alpha) const
  + PushStateCommand(unique_ptr<IGameCommand>)
  + ConsumeCommands() : vector<unique_ptr<IGameCommand>>
}
note bottom of GameState
  Four-phase rule, enforced project-wide:
   HandleInput - read devices only
   Process     - decide, queue transitions
   Update      - advance state and physics
   Render      - draw, mutate nothing
end note

class BaseLevelState
class MainMenuState
class MapSelectionState
class CharacterSelectionState
class LoadingState
class MapEditorState
class EndgameState
class World01State
note right of World01State
  World01State .. World06State are
  thin subclasses that only fix a
  map path in the constructor.
end note

Game *-- StateManager : owns (by value)
StateManager o-- GameState : owns a stack of

GameState <|-- BaseLevelState
GameState <|-- MapSelectionState
GameState <|-- CharacterSelectionState
GameState <|-- LoadingState
GameState <|-- MapEditorState
GameState <|-- EndgameState
BaseLevelState <|-- MainMenuState
BaseLevelState <|-- World01State

@enduml
